--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "azamibot-md",
+	"name": "iBeng-md",
 	"version": "6.0.0",
 	"description": "WhatsApp Bot - Recoded by Zerenity",
 	"main": "index.js",
